[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/ship.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Player_Missile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player_Explosion.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0066
height = 2.34714

[node name="Player" type="Area2D"]
monitorable = false
collision_mask = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Missile = ExtResource( 3 )
Explosion = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MissilePosition" type="Position2D" parent="."]
position = Vector2( 0, -21 )

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="MissileTimer" to="." method="_on_MissileTimer_timeout"]
